# BulletPhysic

./: CMakeLists.txt  README.md
assets/data/drag/: README.md
src/: Config.h  Constants.h  PresetManager.cpp  PresetManager.h
src/collision/: BoxCollider.cpp  BoxCollider.h  Collider.h  CollisionDetection.cpp  CollisionDetection.h  GroundCollider.cpp  GroundCollider.h
src/dynamics/: PhysicsBody.cpp  PhysicsBody.h  PhysicsContext.h  PhysicsWorld.cpp  PhysicsWorld.h  PresetManager.cpp  PresetManager.h  RigidBody.cpp  RigidBody.h
src/dynamics/environment/: Atmosphere.h  Environment.h  Geographic.h  Humidity.h  Wind.h
src/dynamics/forces/: AtmosphereModel.h  AtmosphericDragForce.h  Coriolis.h  Drag.h  DragForce.h  Force.h  ForceGenerator.h  ForceRegistry.cpp  ForceRegistry.h  Gravity.h  GravityForce.h  SpinDrift.h  WindDragForce.h
src/dynamics/forces/drag/: Drag.h  DragModel.cpp  DragModel.h
src/dynamics/presets/: PresetManager.cpp  PresetManager.h
src/geography/: Coordinates.cpp  Coordinates.h
src/math/: Algorithms.h  Angles.h  Constants.h  Integrator.cpp  Integrator.h  Vec3.cpp  Vec3.h
